Fixed the gap above the header background image

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,9 @@
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
 body {
   background-color: black;
   font-family: sans-serif;
@@ -22,6 +28,12 @@ main {
 .header {
   background-image: url(header.jpg);
   background-size: cover;
+  min-height: 100vh;
+}
+
+.header .content-top {
+  margin-top: 0;
+  padding-top: 50vh;
 }
 
 .section {
@@ -52,6 +64,7 @@ main {
 
 @media (min-width: 40rem) {
   .header {
+    min-height: initial;
     padding-top: 10rem;
     padding-bottom: 10rem;
   }
